# agentic-ai

./: AI_AGENTS_CONF_Pr YOUSSFI.ipynb  README.md  agent_mcp.py  pyproject.toml  streamin-ui-agent-mcp.py  streamin-ui-demo.py
